plang/testing/logs/false-incorrect/162/program162.p.p
vLa4Y (F).

i2VvS (VxL) qR (lcD z9hTi egdzw (zd (E) n eLo)) DonX.


p (r) (XVQ) (w dQTV1 (XZ) (uZkNs (aeJl (iule QE j EKd) FEbxh))) :- (c rrHip, (dNI NfDw Nep5 (BdxbX) (peI9b ZjOP (EZ4LK) (mam (PAOB) mCj qaR4s UcMBi) zG54)); nxLff, zYWiE (c (V73L) geG (WaUiD)) (GGVtt)), oiKk (gt (eU (yQl (p5 Nx Da (Y) (tm (Z2h) JlyM)) gVL Lq)) V3r) (cT) N xyV.


jL2 R53w :- t, (((jrU)), ((eO3 uryfv (hdRMV (AzT))))).

xiAh0 (T).


qR5 kiPJv (cLr YZWD0 (FP6W)) :- ((qJp), (ld (e) (tp (yaUku (cO7 (QTr)) (RJ) w) eb) (bfvx j7c), b7IkM ez2h)), (noX dBXfL); wvXFA, yU2Q; ((k8Cy4 (Sh9))); bO (cJTY o) QFm kQ.


yMao1 ncTD :- (vx5 X0PZJ (L), wcks (KgbD) (b (c) TFD (F9Db)) Gxuye (UN8); o2M3 Td (DT), tE, h (UEp), a OImm (s (UxkyE)) OKU3R Wg, oZL, ((m9wHp ou8 adOc cs)); ((lQzhk (ailH Pplq (cA (XTN7) F (q (mIq) o9z (xaF X8m (Nxra) (I) (r)) (rPG d)) (z9j vCnWx))) YlGx))).


j FBKuk (v3X (fWKEc (kUShA (Ox) (Cj) (Yz) GWVdQ) (zL0R q) (k9 dud0 (u h (Fc)) YksGl) (qvL))) (Xz) S.
vXd.
dthS4 (JO) (t8NDo (rWlyy) e4qh2 X7vs) :- (tZu (fb O tGm) (if (kEO1C FlhtL nIh) (s pOw (y (y79Pv (Lr) (Ucd)) (UBH)) (W)) dI)); (b nMwM0 (A) (qBW (W6) (gDWQO)) Sfus).


u (GM) h29 (H0JC3).

cz T4HR (VO).

dY MO5 Clm :- ((qcZgk (sTiz (nob (pG) (c2 (gzfLk (q) Wsln kb))) bSG (kHvI (Sw) (oU3V lvs kqgM8) (RGA) sF7) N) (CeH) (qds6 (B) Wq), (xpwu2 opn), yKmO (TWtPZ) (Ar3UU) (v (p RP eF6B (CbyeA) (TJ)) (RtH) SH); eTb7 (ZMoUz) (po t (P3MGd) (mP Z u (JY))) Oygh U)).


? tT6 WYa (RP), ceM9, vDEB c I0 (ZR), j (vycH9 (QJ4JG) a (wa Z4V PLRd)); y, ((pBiLo (AItBq) M7d Cl9a RA)); fsEP WEHhQ WRa0 a4 (Cl).



